--- a/tools/krad_web/res/krad_radio.html
+++ b/tools/krad_web/res/krad_radio.html
@@ -119,6 +119,7 @@
         .kradlink { margin-top: 132px; }
         .tag { white-space: nowrap; font-family: Helvetica,sans-serif; font-size: 14px; color: #ccc; margin-top: 4px}
         .nowplaying { font-weight: normal; font-size: 18px; margin-left: 6px; white-space: wrap; color: #9faa8b; text-shadow: #111112 5px 2px 5px; }
+        .playback_status { font-weight: normal; font-size: 18px; margin-left: 6px; white-space: wrap; color: #9faa8b; text-shadow: #111112 5px 2px 5px; }
         .playtime { float: left; margin-left: 6px; margin-top: 9px; margin-bottom: 8px; box-shadow: inset #192122 1px 1px 2px; border-radius: 2px; border: 0px solid #444; padding: 3px; font-weight: normal; font-size: 16px; color: #8aaa03; background-color: #434244; text-align: right; padding-right: 9px; width: 48px; }
 
 	</style>
