--- a/lib/krad_web/res/krad_radio.html
+++ b/lib/krad_web/res/krad_radio.html
@@ -237,8 +237,8 @@
       text-shadow: rgba(22,22,22,.3) 0 1px 2px;
       border-top: 0em solid rgba(254,182,69,1);
       border-left: 0px solid rgba(254,182,69,1);
-      border-right: 0.13em solid rgba(254,182,69,0.1);
-      border-bottom: 0.13em solid rgba(254,182,69,0.1);
+      border-right: 2px solid rgba(254,182,69,0.1);
+      border-bottom: 2px solid rgba(254,182,69,0.1);
 
       box-shadow:  inset rgba(0,0,133,0.15) 0 -0.1em .3em, /* inner shadow */ 
             /*hsl(0, 22%, 60%) 0 .1em 1px, hsl(0, 53%, 45%) 0 .1em 1px, /* color border */
@@ -259,8 +259,8 @@
       background: radial-gradient(ellipse at center, rgba(241,231,103,1) 12%,rgba(254,182,69,1) 100%);
       border-top: 0em solid rgba(254,182,69,1);
       border-left: 0px solid rgba(254,182,69,1);
-      border-right: 0.13em solid rgba(254,182,69,1);
-      border-bottom: 0.13em solid rgba(254,182,69,1);
+      border-right: 2px solid rgba(254,182,69,1);
+      border-bottom: 2px solid rgba(254,182,69,1);
       text-shadow: rgba(22,22,22,.35) 0 1px 2px;
       box-shadow:  inset rgba(0,0,133,0.13) 0 -0.1em .3em, /* inner shadow */ 
             /* hsl(0, 22%, 60%) 0 .1em 3px, hsl(0, 33%, 45%) 0 .1em 1px, /* color border */
@@ -293,8 +293,8 @@
       text-shadow: rgba(22,22,22,.3) 0 1px 2px;
       border-top: 0em solid rgba(5,171,224,1);
       border-left: 0px solid rgba(5,171,224,1);
-      border-right: 0.13em solid rgba(5,171,224,0.1);
-      border-bottom: 0.13em solid rgba(5,171,224,0.1);
+      border-right: 2px solid rgba(5,171,224,0.1);
+      border-bottom: 2px solid rgba(5,171,224,0.1);
 
       box-shadow:  inset rgba(0,0,133,0.15) 0 -0.1em .3em, /* inner shadow */ 
             /*hsl(0, 22%, 60%) 0 .1em 1px, hsl(0, 53%, 45%) 0 .1em 1px, /* color border */
@@ -315,8 +315,8 @@
       background: radial-gradient(ellipse at center, rgba(83,203,241,1) 12%,rgba(5,171,224,1) 100%);
       border-top: 0em solid rgba(5,171,224,1);
       border-left: 0px solid rgba(5,171,224,1);
-      border-right: 0.13em solid rgba(5,171,224,1);
-      border-bottom: 0.13em solid rgba(5,171,224,1);
+      border-right: 2px solid rgba(5,171,224,1);
+      border-bottom: 2px solid rgba(5,171,224,1);
       text-shadow: rgba(22,22,22,.35) 0 1px 2px;
       box-shadow:  inset rgba(0,0,133,0.13) 0 -0.1em .3em, /* inner shadow */ 
             /* hsl(0, 22%, 60%) 0 .1em 3px, hsl(0, 33%, 45%) 0 .1em 1px, /* color border */
@@ -349,8 +349,8 @@
       text-shadow: rgba(22,22,22,.3) 0 1px 2px;
       border-top: 0em solid rgba(171,171,171,1);
       border-left: 0px solid rgba(171,171,171,1);
-      border-right: 0.13em solid rgba(171,171,171,0.1);
-      border-bottom: 0.13em solid rgba(171,171,171,0.1);
+      border-right: 2px solid rgba(171,171,171,0.1);
+      border-bottom: 2px solid rgba(171,171,171,0.1);
 
       box-shadow:  inset rgba(0,0,133,0.15) 0 -0.1em .3em, /* inner shadow */ 
             /*hsl(0, 22%, 60%) 0 .1em 1px, hsl(0, 53%, 45%) 0 .1em 1px, /* color border */
@@ -371,8 +371,8 @@
       background: radial-gradient(ellipse at center, rgba(151,151,151,1) 12%,rgba(171,171,171,1) 100%);
       border-top: 0em solid rgba(171,171,171,1);
       border-left: 0px solid rgba(171,171,171,1);
-      border-right: 0.13em solid rgba(171,171,171,1);
-      border-bottom: 0.13em solid rgba(171,171,171,1);
+      border-right: 2px solid rgba(171,171,171,1);
+      border-bottom: 2px solid rgba(171,171,171,1);
       text-shadow: rgba(22,22,22,.35) 0 1px 2px;
       box-shadow:  inset rgba(0,0,133,0.13) 0 -0.1em .3em, /* inner shadow */ 
             /* hsl(0, 22%, 60%) 0 .1em 3px, hsl(0, 33%, 45%) 0 .1em 1px, /* color border */
@@ -406,8 +406,8 @@
       text-shadow: rgba(22,22,22,.3) 0 1px 2px;
       border-top: 0em solid rgba(171,5,224,1);
       border-left: 0px solid rgba(171,5,224,1);
-      border-right: 0.13em solid rgba(171,5,224,0.1);
-      border-bottom: 0.13em solid rgba(171,5,224,0.1);
+      border-right: 2px solid rgba(171,5,224,0.1);
+      border-bottom: 2px solid rgba(171,5,224,0.1);
 
       box-shadow:  inset rgba(0,0,133,0.15) 0 -0.1em .3em, /* inner shadow */ 
             /*hsl(0, 22%, 60%) 0 .1em 1px, hsl(0, 53%, 45%) 0 .1em 1px, /* color border */
@@ -428,8 +428,8 @@
       background: radial-gradient(ellipse at center, rgba(83,203,241,1) 12%,rgba(171,5,224,1) 100%);
       border-top: 0em solid rgba(171,5,224,1);
       border-left: 0px solid rgba(171,5,224,1);
-      border-right: 0.13em solid rgba(171,5,224,1);
-      border-bottom: 0.13em solid rgba(171,5,224,1);
+      border-right: 2px solid rgba(171,5,224,1);
+      border-bottom: 2px solid rgba(171,5,224,1);
       text-shadow: rgba(22,22,22,.35) 0 1px 2px;
       box-shadow:  inset rgba(0,0,133,0.13) 0 -0.1em .3em, /* inner shadow */ 
             /* hsl(0, 22%, 60%) 0 .1em 3px, hsl(0, 33%, 45%) 0 .1em 1px, /* color border */
@@ -463,8 +463,8 @@
       text-shadow: rgba(22,22,22,.3) 0 1px 2px;
       border-top: 0em solid rgba(244,5,35,1);
       border-left: 0px solid rgba(244,5,35,1);
-      border-right: 0.13em solid rgba(244,5,35,0.1);
-      border-bottom: 0.13em solid rgba(244,5,35,0.1);
+      border-right: 2px solid rgba(244,5,35,0.1);
+      border-bottom: 2px solid rgba(244,5,35,0.1);
       box-shadow:  inset rgba(0,0,133,0.15) 0 -0.1em .3em, /* inner shadow */ 
             /*hsl(0, 22%, 60%) 0 .1em 1px, hsl(0, 53%, 45%) 0 .1em 1px, /* color border */
             rgba(244,5,35,1) 0px 1px 5px; /* drop shadow */
@@ -630,8 +630,8 @@
       text-shadow: rgba(22,22,22,.3) 0 1px 2px;
       border-top: 0em solid rgba(171,171,171,1);
       border-left: 0px solid rgba(171,171,171,1);
-      border-right: 0.13em solid rgba(171,171,171,0.1);
-      border-bottom: 0.13em solid rgba(171,171,171,0.1);
+      border-right: 2px solid rgba(171,171,171,0.1);
+      border-bottom: 2px solid rgba(171,171,171,0.1);
 
       box-shadow:  inset rgba(0,0,133,0.15) 0 -0.1em .3em, /* inner shadow */ 
             /*hsl(0, 22%, 60%) 0 .1em 1px, hsl(0, 53%, 45%) 0 .1em 1px, /* color border */
@@ -652,8 +652,8 @@
       background: radial-gradient(ellipse at center, rgba(151,151,151,1) 12%,rgba(171,171,171,1) 100%);
       border-top: 0em solid rgba(171,171,171,1);
       border-left: 0px solid rgba(171,171,171,1);
-      border-right: 0.13em solid rgba(171,171,171,1);
-      border-bottom: 0.13em solid rgba(171,171,171,1);
+      border-right: 2px solid rgba(171,171,171,1);
+      border-bottom: 2px solid rgba(171,171,171,1);
       text-shadow: rgba(22,22,22,.35) 0 1px 2px;
       box-shadow:  inset rgba(0,0,133,0.13) 0 -0.1em .3em, /* inner shadow */ 
             /* hsl(0, 22%, 60%) 0 .1em 3px, hsl(0, 33%, 45%) 0 .1em 1px, /* color border */
@@ -669,7 +669,6 @@
       height: 50px;
       float: left;
     }
-
   </style>
   <style>
 /*
