eq control on the web

--- a/lib/krad_web/res/krad_radio.html
+++ b/lib/krad_web/res/krad_radio.html
@@ -118,7 +118,7 @@
     .kradlink_info, .kradmixer_info, .kradcompositor_info { display: none; width: 80%; margin: 2px; margin-bottom: 4px; padding: 2px; padding-top: 2px; padding-left: 20px;  border-left: 12px solid #505050; }
     .kradlink_link { width: 80%; margin: 20px; margin-bottom: 32px; padding: 10px; padding-top: 2px; padding-left: 20px;  border-left: 12px solid #616161; }
     .dtmf_pad { width: 254px; height: 230px; padding: 2px; }
-    .effect_area { width: 554px; height: 230px; padding: 2px; }
+    .effect_area { width: 80%; height: 1200px; padding: 2px; }
     .dtmf_button { color: #FFFFFF; 
              background-color: #0000FF; text-align: center; width: 22px; height: 22px; margin: 2px;
              border: 1px solid grey; cursor: pointer; float: left; }
