note and style change

--- a/lib/krad_web/res/krad_radio.html
+++ b/lib/krad_web/res/krad_radio.html
@@ -8,12 +8,12 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
   <script type="text/javascript" src="/krad_radio.js"></script>
   <style>
-    /*
+    
     @font-face {
       font-family: "TradeGothicLTComBoldCondensed";
       src: url("http://europa.kradradio.com:8040/tradegothicltcom-bdcn20-webfont.woff");
     }
-    */
+    
     body {
       font-family: Helvetica,sans-serif; 
       -moz-user-select: none;
@@ -60,6 +60,8 @@
     .kradmixer_control {
       margin-top: 24px;
     }
+
+     .kradradio_station { margin-top: 20px; }
 
     .kradmixer_control, .kradlink_control { height: 200px; float: left; margin: 14px; }
 
@@ -623,9 +625,9 @@
       padding-right: 8px;
       padding-top: 5px;
       padding-bottom: 4px;
-      font-size: 14px;
-      font-weight: bold;
-      font-family: Helvetica, sans-serif;
+      font-size: 24px;
+      font-weight: normal;
+      font-family: "TradeGothicLTComBoldCondensed", "Trade Gothic LT Com", Helvetica, sans-serif;
       color: #222227;
       -moz-user-select: none;
       -webkit-user-select: none;
