fixed corner 2 handle resize... added subunit list

--- a/lib/krad_web/res/krad_radio.html
+++ b/lib/krad_web/res/krad_radio.html
@@ -43,6 +43,35 @@
       background-color: #ffffff;
       float: left;
       margin: 14px;
+      box-shadow: 0px 0px 8px 8px rgba(0,0,0,0.5);
+    }
+
+    ul {
+      list-style:none;
+      border-radius: 6px;
+      background-color: #383838
+    }
+
+    li {
+
+      border-radius: 6px;
+      color: white;
+      background-color: #2A2A2A; 
+      padding: 20px;
+    }
+
+    li.alt {
+      background-color: #282828;
+    }
+    
+    .alt.selected {
+      background-color: #475b7e;
+    }
+
+    .selected {
+      color: white;
+      background-color: #43587A;
+      font-weight: bold;
     }
 
     .kradcompositor_sprite {
