add broadcasts for subunit deletion. handle those bcs.  handle fonts sizes in comp ui better.  got rid of some global variables.

--- a/lib/krad_web/res/krad_radio.html
+++ b/lib/krad_web/res/krad_radio.html
@@ -36,14 +36,22 @@
     }
 
 
-    .kradcompositor_sprite_position_control {
+    .kradcompositor_control {
       border: 1px solid black;
       width: 960px;
       height: 540px;
       background-color: #ffffff;
       float: left;
       margin: 14px;
-      box-shadow: 0px 0px 8px 8px rgba(0,0,0,0.5);
+      box-shadow: 0px 0px 10px #000;
+    <!--0px 0px 8px 8px rgba(0,0,0,0.5);-->
+    }
+    
+
+    .kradcompositor_subunit_list {
+      width: 960px;
+      float: left;
+      margin: 14px;
     }
 
     ul {
