js cleanup part 3. next stop, new web

--- a/lib/krad_web/res/krad_radio.html
+++ b/lib/krad_web/res/krad_radio.html
@@ -4,6 +4,7 @@
   <title>Krad Radio</title>
   <meta charset="utf-8">
   <!-- <link rel="shortcut icon" href="/favicon.png"> -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
   <script type="text/javascript" src="krad.js"></script>
@@ -122,12 +123,14 @@
       
      
 
-    .kradmixer_control, .kradlink_control { height: 200px; float: left; margin: 14px; }
+    .kradmixer_control { height: 200px; float: left; margin: 14px; }
+
+    .kradmixer_control { height: 200px; float: left; margin: 14px; }
 
     .kradmixer_control h2, .kradlink_control h2, .kradlink_control h3, .masterbus h2 {
-            position: relative;
-            right: 0px;
-            bottom: 120px;
+            position: relative;            
+            right: 66px;
+            bottom: 100px;
             -webkit-transform: rotate(-90deg);
             -moz-transform: rotate(-90deg);
             -o-transform: rotate(-90deg);
