--- a/lib/krad_web/res/krad_radio.html
+++ b/lib/krad_web/res/krad_radio.html
@@ -24,14 +24,56 @@ body {
   text-shadow: 0px 0px 1em #020202;
 }
 
-.kradmixer, .eq_area, .effect_area, .kradcompositor_control {
-
+.kradmixer, .eq_area, .effect_area, .kradmixer_cappa, .kradcompositor_control, .chooser {
   border: 15px solid #aaa;
   background-color: #666;
   float:left;
   box-shadow: 1px 1px 2px rgb(2, 2, 2);
 }
 
+.chooser {
+  position: fixed;
+  bottom: 0px;
+  left: 40%;
+}
+
+.chooser_choice {
+  float:left;
+  background-color: #333;
+  width: 5em;
+  height: 3em;
+  text-align: center;
+}
+
+.chooser_choice.chooser_chosen {
+  background: radial-gradient(ellipse at center, rgba(15,15,15,1) 0%,rgba(171,171,171,1) 100%);
+}
+
+.kradcompositor_canvas {
+  width: 960px;
+  height: 540px;
+  margin: 10px;
+  float:left;
+  background-color: #555; 
+  border: 15px solid #aaa;
+  box-shadow: 1px 1px 2px rgb(2,2,2);
+}
+
+.eq_area, .effect_area, .kradmixer_cappa {
+  display: none;
+}
+
+.kradmixer_cappa {
+  position: absolute;
+  top: 100px;
+  left: 100px;
+}
+
+.close {
+  position: absolute;
+  right: 0px;
+  top: 0px; 
+}
 .portgroup {
     float: left;
 }
@@ -40,13 +82,13 @@ body {
 }
 
 .fade {
-  height: 24px;
+  height: 10px;
   width: 150px;
-  margin: 20px;
+  margin: 30px;
 }
 .fade .handle {
-  top: -20px;
-  height: 64px;
+  top: -12px;
+  height: 32px;
   width: 24px;
 }
 .volume {
@@ -109,13 +151,6 @@ h1, h2, h3, h4, h5, h6 {
       border-radius: 6px;
     }
 
-.kradcompositor_canvas {
-  width: 960px;
-  height: 540px;
-  margin: 10px;
-  float:left;
-  background-color: #333; 
-}
 
     li {
 
@@ -173,13 +208,7 @@ h1, h2, h3, h4, h5, h6 {
             -moz-transform: none;
             -o-transform: none;
     }
-    
-    .crossfade_control h2 {
-            text-align: center;
-            -webkit-transform: none;
-            -moz-transform: none;
-            -o-transform: none;
-    }
+
 
     .sysname {
       font-size: 96px;
@@ -189,12 +218,15 @@ h1, h2, h3, h4, h5, h6 {
 
 .meter_wrapper {
   text-align: center;
+  margin-left: 10px;
   float:left;
 }
 
-.volume_control { 
+.volume_control, #xmms2s, #crossfades { 
   float: left; 
-  margin-left: 10px;
+  margin: 10px;
+  background: radial-gradient(ellipse at center, rgba(15,15,15,1) 0%,rgba(171,171,171,1) 100%);
+  border: 10px solid #333;
 }
 
     .crossfade_control { float: left; }
@@ -208,6 +240,8 @@ h1, h2, h3, h4, h5, h6 {
     .dtmf_button_mil { color: #FFFFFF;
                background-color: #FF0000;  text-align: center; width: 22px; height: 22px; margin: 2px;
                border: 1px solid grey; cursor: pointer; float: left; }
+
+
   </style>
   
   <style>
@@ -802,9 +836,10 @@ h1, h2, h3, h4, h5, h6 {
       color: #222227;
     }
 
-    .button_wrap {
-      /*height: 50px;
-      float: left;*/
+    #xmms2s .button_wrap {
+      
+      /*height: 50px;*/
+      float: left;
     }
   </style>
 
