--- a/lib/krad_web/res/krad_radio.html
+++ b/lib/krad_web/res/krad_radio.html
@@ -20,7 +20,7 @@ body {
   -webkit-user-select: none;
   margin-left: 20px;
   background-color: #51617a;
-  color: #7a6a51;
+  color: #ccc;
   text-shadow: 0px 0px 1em #020202;
 }
 
@@ -57,13 +57,13 @@ body {
   box-shadow: 1px 1px 2px rgb(2,2,2);
 }
 
-.eq_area, .effect_area, .kradmixer_cappa, .kradcompositor {
+.eq_area, .effect_area, .kradmixer_cappa {
   display: none;
 }
 
-.kradcompositor {
+/*.kradcompositor {
   opacity: 0;
-}
+}*/
 
 .kradmixer_cappa {
   position: fixed;
@@ -204,9 +204,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 
 
-    .kradmixer_control, .crossfade_control h2 {
-            position: relative;
-            text-shadow: 0px 0px 1em #020202;
+    .kradmixer_control {
             font-size: 8px;
             font-weight: bold; 
             text-align: center;
