--- a/lib/krad_web/res/krad_radio.html
+++ b/lib/krad_web/res/krad_radio.html
@@ -109,12 +109,12 @@ h1, h2, h3, h4, h5, h6 {
   float: right;
   position: absolute;
   top: -10px;
-  right: -10px;
-
-  border-radius: 20px;
-  width: 36px;
-  height: 36px;
+  right: -20px;
 }
+
+.minimized_portgroup_wrap {
+  float: left;
+} 
 
 .fade {
   position: relative;
@@ -227,6 +227,23 @@ button::-moz-focus-outer, ::-moz-focus-inner {
       border-radius:25px;
      }
     
+.minimized_portgroup_wraps .meter {
+  
+}
+.minimized_portgroup_wrap h3, .minimized_crossfade_wrap h3 {
+  float: left;
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  position: relative;
+  top: 100px;
+  font-size: 30px;
+  height: 260px;
+  width: 0px;
+  margin: 20px;
+  left: 120px;
+}
+
 .chooser {
   float: none;
   /*width: 9%;
