--- a/lib/krad_web/res/krad_radio.html
+++ b/lib/krad_web/res/krad_radio.html
@@ -152,6 +152,8 @@ h1, h2, h3, h4, h5, h6 {
   margin: 10px;
   border-radius: 1px 1px 1px 1px;
   box-shadow: 0px -16.5px 9.5px rgb(54, 52, 52) inset;
+  position: relative;
+  z-index: 5;
 }
 
 .volume {
@@ -280,9 +282,10 @@ button::-moz-focus-outer, ::-moz-focus-inner {
 }
 
 .kradmixer_cappa h4 {
+  z-index: 0;
   position: absolute;
-  right: -32px;
-  top: 38px;
+  right: -34px;
+  top: 36px;
   -webkit-transform: rotate(-90deg);
   -moz-transform: rotate(-90deg);
   -o-transform: rotate(-90deg);
@@ -292,7 +295,7 @@ button::-moz-focus-outer, ::-moz-focus-inner {
   font-weight: bold;
   font-size: 12px;
   width: 100px;
-  height: 12px;
+
 }
 
 .xmms2_control {
