--- a/lib/krad_web/res/krad_radio.html
+++ b/lib/krad_web/res/krad_radio.html
@@ -294,7 +294,7 @@ li.alt {
 .kradmixer_cappa h4 {
   z-index: 0;
   position: absolute;
-  right: -2.125em;
+  right: -2.75em;
   top: 2.25em;
   -webkit-transform: rotate(-90deg);
   -moz-transform: rotate(-90deg);
@@ -304,8 +304,8 @@ li.alt {
   text-shadow: 0em 0em 0em #444;
   font-weight: bold;
   font-size: 0.75em;
-  width: 6.25em;
-
+  width: 8.25em
+ 
 }
 
 .xmms2_control {
