splitting up js in towards new rack ideas

--- a/lib/krad_web/res/krad_radio.html
+++ b/lib/krad_web/res/krad_radio.html
@@ -141,7 +141,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .crossfade {
   position: relative;
-  top: 6.250;
+  top: 6.250em;
 }
 
 .fade {
@@ -184,7 +184,7 @@ h1, h2, h3, h4, h5, h6 {
 .volume {
   width: 1.5em;
   height: 12.5em;
-  margin-left: 3.750;
+  margin-left: 3.750em;
   margin-right: 0.625em;
   margin-bottom: 0.625em;
   background-color: rgb(114, 114, 114);
