--- a/lib/krad_web/res/krad_radio.html
+++ b/lib/krad_web/res/krad_radio.html
@@ -159,7 +159,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 1.5em;
 }
 
-.kradmixer_cappa .handle {
+.effects .handle {
   background-color: rgb(136, 136, 136);
   box-shadow: 0 0.031em 0.156em rgb(24, 32, 29);
   left: -0.625em;
@@ -169,7 +169,7 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 10;
 }
 
-.kradmixer_cappa .volume {
+.effects .volume {
   width: 0.75em;
   height: 6.25em;
   margin-left: 1.875em;
@@ -279,19 +279,19 @@ li.alt {
   background-color: grey*/;
 }
 
-.kradmixer_cappa {
+.effects {
   display: none;
 }
 
 
-.kradmixer_cappa h2 {
+.effects h2 {
   position: absolute;
   right: 0;
   font-size: 1.875em;
   color: grey;
 }
 
-.kradmixer_cappa h4 {
+.effects h4 {
   z-index: 0;
   position: absolute;
   right: -2.75em;
