some crate faking to pass to units who wouldn't get a self-broadcast

--- a/lib/krad_web/res/krad_radio.html
+++ b/lib/krad_web/res/krad_radio.html
@@ -136,8 +136,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .kradcompositor_canvas {
-  width: 60em;
-  height: 33.75em;
+  width: 960px;
+  height: 540px;
   float:left;
 }
 
@@ -197,7 +197,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .volume {
   width: 1.5em;
-  height: 12.5em;
+  height: 200px;
   margin-left: 3.750em;
   margin-right: 0.625em;
   margin-bottom: 0.625em;
