added a pager, and a mis-named ascii-cam

--- a/lib/krad_web/core/index.html
+++ b/lib/krad_web/core/index.html
@@ -74,6 +74,10 @@ h1, h2, h3, h4, h5, h6 {
   background-color: black;
 }
 
+.page {
+  height: 100%
+}
+
 .volume_control h6 {
   font-size: 115%;
   margin: 4%;
