add basics of uploader

--- a/lib/krad_web/core/index.html
+++ b/lib/krad_web/core/index.html
@@ -25,6 +25,11 @@
 }
 
 @font-face {
+  font-family: "Digital7Mono";
+  src: url("http://europa.kradradio.com:8040/digital-7_mono-webfont.woff");
+}
+
+@font-face {
   font-family: "DS-DIGI";
   src: url("http://europa.kradradio.com:8040/ds-digi-webfont.woff");
 }
@@ -61,7 +66,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .clock {
-  font-family: DS-DIGI,HelveticaNeueW0195Black,Helvetica,sans;
+  font-family: Digital7Mono,HelveticaNeueW0195Black,Helvetica,sans;
   background-color: black;
   color: red;
   text-align: center;
@@ -98,6 +103,13 @@ h1, h2, h3, h4, h5, h6 {
   top: 60%;
   width: 200px;
   height: 200px;
+}
+
+video {
+  border: solid;
+  border-width: 20px;
+  border-color: #fff;
+  border-radius: 20px;
 }
 
 .eq_area, .effect_area {
