--- a/lib/krad_web/core/index.html
+++ b/lib/krad_web/core/index.html
@@ -68,8 +68,9 @@ h1, h2, h3, h4, h5, h6 {
   color: red;
   text-align: center;
   border-width: 0.125em;
-  border-color: white;
-  text-shadow: red 0 0 0.125em;
+  border: solid white;
+  text-shadow: red 0 0 0.025em;
+  background-color: #02DD4F;
 }
 
 .logo {
@@ -102,7 +103,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 200px;
 }
 
-video {
+video, #canvas {
   border: solid;
   border-width: 20px;
   border-color: #fff;
