added register/unregister broadcasts so uis can maintain list of active users for calls

--- a/lib/krad_web/core/index.html
+++ b/lib/krad_web/core/index.html
@@ -249,14 +249,25 @@ button::-moz-focus-outer, ::-moz-focus-inner {
   border: 0.0625em solid transparent !important;
 }
 
-.kradcompositor_subunit_list {
+input {
+  margin-left: 0.625em;
+  margin-right: 0.625em;
+  margin-top: 0.5625em;
+  margin-bottom: 0.5625em;
+}
+
+ul {
+  margin-left: 0.625em;
+  margin-right: 0.625em;
+  margin-top: 0.5625em;
+  margin-bottom: 0.5625em;
   float: left;
-  font-size: 0.875em;
+  padding-left: 2.5em;
+  font-size: 1.5em;
   background-color: rgb(10, 106,89)
 }
 
 li {
-  float: left;
   border-radius: 0.375em;
   background-color: rgb(2, 137, 114);
   padding: 0.3125em;
