various fixes.  calls ring callee and ask for whether to answer.  in the middle of resizing clock and pager on load... introduced way for every unit to resize on window resize as registering more than one would overwrite the other

--- a/lib/krad_web/core/index.html
+++ b/lib/krad_web/core/index.html
@@ -67,10 +67,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: black;
   color: red;
   text-align: center;
-  border-width: 0.125em;
-  border: solid white;
   text-shadow: red 0 0 0.025em;
-  background-color: #02DD4F;
 }
 
 .logo {
@@ -78,7 +75,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .page {
-  height: 100%
+  cursor: default;
+  height: 100%;
 }
 
 .volume_control h6 {
@@ -104,6 +102,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 video, #canvas {
+  width: 100px;
   border: solid;
   border-width: 20px;
   border-color: #fff;
