--- a/lib/krad_web/core/index.html
+++ b/lib/krad_web/core/index.html
@@ -4,8 +4,10 @@
   <title>Krad Radio</title>
   <meta charset="utf-8">
   <!--<link rel="shortcut icon" href="/favicon.png"> -->
-
+  <link rel="stylesheet"
+  href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
   <script src="//europa.kradradio.com:8040/mootools-core-1.4.5-full-nocompat.js"></script>
   <script src="//europa.kradradio.com:8040/mootools-more-1.4.0.1.js"></script>
   <script type="text/javascript" src="krad.js"></script>
@@ -102,11 +104,57 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 video, #canvas {
-  width: 100px;
+  width: 128px;
   border: solid;
-  border-width: 20px;
-  border-color: #fff;
-  border-radius: 20px;
+  border-radius: 2px;
+  border-color: #3960DB;
+  border-width: 2px;
+}
+
+.call_container {
+  position: relative;
+  width: 960px
+}
+
+.remote_video {
+  width: 100%;
+}
+
+.remote_video_label {
+  width: 100%;
+  top: 0%;
+  left: 0%;
+  font-size: 4em;
+  text-shadow: 0px 0px 20px #4970EB;
+  text-align: center;
+  position: absolute;
+  color: #4970EB;
+  z-index: 1;
+}
+
+.local_video_label {
+  left: 0%;
+  top: 0%;
+  width: 100%;
+  position: absolute;
+  color: #4970EB;
+  z-index: 11;
+  text-align: center;
+  text-shadow: 0px 0px 20px #4970EB;
+}
+
+.local_video {
+  width: 100%;
+  position:absolute;
+  box-shadow: 0px 0px 20px #4970EB;
+}
+
+.local_video_div {
+  left: 70%;
+  top: 6%;
+  width: 25%;
+  position: absolute;
+  z-index: 10;
 }
 
 .eq_area, .effect_area {
