added spectrograms to viz audio; added labels to input streams; drag n drop stream on callee's name in list to call; poll for video load since play event fires at the wrong time; queue candidate messages until ready to handle them... it was an issue with chrome/chromium handling a candidate too early

--- a/lib/krad_web/core/index.html
+++ b/lib/krad_web/core/index.html
@@ -103,21 +103,37 @@ h1, h2, h3, h4, h5, h6 {
   height: 200px;
 }
 
-video, #canvas {
-  width: 128px;
+video {
+}
+
+.local_stream_div, .call_container {
   border: solid;
   border-radius: 2px;
   border-color: #3960DB;
   border-width: 2px;
+  position: relative;
+  float:left;
+}
+
+.local_stream_spectrum_canvas {
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  pointer-events:none;
+}
+
+.local_stream_video {
+  position: absolute;
 }
 
 .call_container {
-  position: relative;
   width: 960px
 }
 
 .remote_video {
   width: 100%;
+  position: absolute;
 }
 
 .remote_video_label {
@@ -130,17 +146,26 @@ video, #canvas {
   position: absolute;
   color: #4970EB;
   z-index: 1;
+  pointer-events:none;
 }
 
-.local_video_label {
+.local_stream_label, .local_video_label {
   left: 0%;
   top: 0%;
   width: 100%;
   position: absolute;
   color: #4970EB;
-  z-index: 11;
+  z-index: 1;
   text-align: center;
   text-shadow: 0px 0px 20px #4970EB;
+  pointer-events:none;
+}
+
+.local_video_canvas {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  pointer-events:none;
 }
 
 .local_video {
@@ -150,6 +175,7 @@ video, #canvas {
 }
 
 .local_video_div {
+  float: left;
   left: 70%;
   top: 6%;
   width: 25%;
