added labels to local streams; added call from stream n buttons to each user

--- a/lib/krad_web/core/index.html
+++ b/lib/krad_web/core/index.html
@@ -329,6 +329,7 @@ input {
   margin-bottom: 0.5625em;
 }
 
+
 ul {
   margin-left: 0.625em;
   margin-right: 0.625em;
@@ -338,6 +339,14 @@ ul {
   padding-left: 2.5em;
   font-size: 1.5em;
   background-color: rgb(10, 106,89)
+}
+
+#user_list {
+  font-size: 1.0em;
+}
+
+#user_list li {
+  padding: 1.0em;
 }
 
 li {
