buttons for hangup in place

--- a/lib/krad_web/core/index.html
+++ b/lib/krad_web/core/index.html
@@ -112,7 +112,10 @@ video {
   border-color: #3960DB;
   border-width: 2px;
   position: relative;
-  float:left;
+}
+
+.local_stream_div {
+  float: left;
 }
 
 .local_stream_spectrum_canvas {
