--- a/lib/krad_web/core/index.html
+++ b/lib/krad_web/core/index.html
@@ -3,34 +3,35 @@
 <head>
   <title>Krad Radio</title>
   <meta charset="utf-8">
-  <!--<link rel="shortcut icon" href="/favicon.png"> -->
+  <link rel="shortcut icon" 
+  href=http://europa.kradradio.com:8040/dev/favicon.ico" />
   <link rel="stylesheet"
   href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-  <script src="//europa.kradradio.com:8040/mootools-core-1.4.5-full-nocompat.js"></script>
-  <script src="//europa.kradradio.com:8040/mootools-more-1.4.0.1.js"></script>
+  <script src="//europa.kradradio.com:8040/dev/mootools-core-1.4.5-full-nocompat.js"></script>
+  <script src="//europa.kradradio.com:8040/dev/mootools-more-1.4.0.1.js"></script>
   <script type="text/javascript" src="krad.js"></script>
 <style>
 
 @font-face {
   font-family: "HelveticaNeueW0195Black";
-  src: url("http://media.kradradio.com/HelveticaNeueW0195Black.woff");
+  src: url("http://europa.kradradio.com:8040/dev/HelveticaNeueW0195Black.woff");
 }
 
 @font-face {
   font-family: "TradeGothicLTComBoldCondensed";
-  src: url("http://europa.kradradio.com:8040/tradegothicltcom-bdcn20-webfont.woff");
+  src: url("http://europa.kradradio.com:8040/dev/tradegothicltcom-bdcn20-webfont.woff");
 }
 
 @font-face {
   font-family: "Digital7Mono";
-  src: url("http://europa.kradradio.com:8040/digital-7_mono-webfont.woff");
+  src: url("http://europa.kradradio.com:8040/dev/digital-7_mono-webfont.woff");
 }
 
 @font-face {
   font-family: "DS-DIGI";
-  src: url("http://europa.kradradio.com:8040/ds-digi-webfont.woff");
+  src: url("http://europa.kradradio.com:8040/dev/ds-digi-webfont.woff");
 }
 
 .rrrred { background-color: #E20A16; }
