--- a/lib/krad_web/core/index.html
+++ b/lib/krad_web/core/index.html
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: black;
   color: red;
   text-align: center;
-  text-shadow: red 0 0 0.025em;
+  text-shadow: red 0 0 0.125em;
 }
 
 .logo {
@@ -83,6 +83,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 4%;
   text-align: left;
   font-family: HelveticaNeueW0195Black;
+  font-size: 1.8em;
 }
 
 .analog_meter_wrapper {
@@ -186,7 +187,7 @@ video {
 }
 
 .eq_area, .effect_area {
-  margin: 0.625em;
+  margin: 1.625em;
   float: left;
   display:none;
 }
@@ -262,7 +263,7 @@ video {
   width: 1.5em;
 }
 
-.effects .handle {
+.effects .handle, .eq .handle {
   background-color: rgb(136, 136, 136);
   box-shadow: 0 0.031em 0.156em rgb(24, 32, 29);
   left: -0.625em;
@@ -272,9 +273,9 @@ video {
   z-index: 10;
 }
 
-.effects .volume {
+.effects .volume, .eq .volume {
   width: 0.75em;
-  height: 6.25em;
+  height: 8.25em;
   margin-left: 1.875em;
   margin-right: 0.313em;
   margin-bottom: 0.313em;
@@ -409,11 +410,11 @@ li.alt {
   color: grey;
 }
 
-.effects h4 {
+.effects h4, .eq h4 {
   z-index: 0;
   position: absolute;
-  right: -2.75em;
-  top: 2.25em;
+  right: -3.0em;
+  top: 2.2em;
   -webkit-transform: rotate(-90deg);
   -moz-transform: rotate(-90deg);
   -o-transform: rotate(-90deg);
@@ -421,8 +422,9 @@ li.alt {
   background-color: rgb(222,222,22);
   text-shadow: 0 0 0 #444;
   font-weight: bold;
-  font-size: 0.75em;
-  width: 8.25em
+  font-size: 1.0em;
+  font-family: HelveticaNeueW0195Black; 
+  width: 8.25em;
 
 }
 
@@ -508,7 +510,7 @@ li.alt {
       padding-right: 0.375em;
       padding-top: 0.125em;
       padding-bottom: 0.125em;
-      font-size: 1.25em;
+      font-size: 1.5em;
       /*font-weight: bold;*/
       font-family: TradeGothicLTComBoldCondensed, Helvetica, sans-serif;
       color: #484848;
